adjust font size down and fix public height on mobile

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -90,7 +90,7 @@
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
     --max-md-map-height: calc(100svh - 12.1rem);
-    --md-map-height: calc(100svh - 10.6rem);
+    --md-map-height: calc(100svh - 10.4rem);
   }
   .dark {
     --background: 0 0% 3.9%;
